tests/samples/extends-unexpected-content/template.blate
// error: extends unexpected content
{@extends './path.to.file.blate' context}
	{@slot title} Title {/slot}
	a content that should not be there
{/extends}